--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@ const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
     <p>Latest gaming videos & content</p>
   </header>
   <nav>
-    <a href="https://discord.gg/YOURDISCORD" target="_blank">Discord</a>
+    <a href="https://discord.gg/XPpsUDdU" target="_blank">Discord</a>
     <a href="/contact.html">Contact</a>
-    <a href="https://patreon.com/YOURPATREON" target="_blank">Become a Patron</a>
-    <a href="https://www.buymeacoffee.com/YOURNAME" target="_blank">Buy Me a Coffee ☕</a>
+    <a href="patreon.com/Pixeljack23" target="_blank">Become a Patron</a>
+    <a href="buymeacoffee.com/pixeljack23" target="_blank">Buy Me a Coffee ☕</a>
   </nav>
 
 
@@ -136,3 +136,4 @@ const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
   </footer>
 </body>
 </html>
+
