--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
     <a href="https://discord.gg/XPpsUDdU" target="_blank">Discord</a>
     <a href="/contact.html">Contact</a>
     <a href="https://patreon.com/Pixeljack23?utm_medium=unknown&utm_source=join_link&utm_campaign=creatorshare_creator&utm_content=copyLink" target="_blank">Become a Patron</a>
-    <a href="buymeacoffee.com/pixeljack23" target="_blank">Buy Me a Coffee ☕</a>
+    <a href="https://buymeacoffee.com/pixeljack23" target="_blank">Buy Me a Coffee ☕</a>
   </nav>
 
 
@@ -136,6 +136,7 @@ const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
   </footer>
 </body>
 </html>
+
 
 
 
