--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
 </head>
 <body>
   <header>
-    <h1>JackTube 🎮</h1>
+    <h1>Pixeljack23 🎮</h1>
     <p>Latest gaming videos & content</p>
   </header>
   <nav>
@@ -132,10 +132,11 @@ const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBh
   </main>
 
   <footer>
-    <p>© 2025 JackTube. All rights reserved.</p>
+    <p>© 2025 PixelJack23. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
 
 
 
