--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | JackTube 🎮</title>
+  <title>Contact | PixelJack23 🎮</title>
 
   <!-- SEO -->
   <meta name="description" content="Contact JackTube 🎮 for collaborations, support, and gaming inquiries." />
@@ -148,7 +148,7 @@
 </head>
 <body>
   <header>
-    <h1>JackTube 🎮</h1>
+    <h1>PixlJack23 🎮</h1>
     <p>Get in Touch</p>
   </header>
 
@@ -176,7 +176,8 @@
   </main>
 
   <footer>
-    <p>© 2025 JackTube. All rights reserved.</p>
+    <p>© 2025 Pixeljack23. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
