--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@
 </head>
 <body>
   <header>
-    <h1>PixlJack23 🎮</h1>
+    <h1>PixelJack23 🎮</h1>
     <p>Get in Touch</p>
   </header>
 
@@ -180,4 +180,5 @@
   </footer>
 </body>
 </html>
+
 
